移动端强制横屏显示

--- a/css/index.css
+++ b/css/index.css
@@ -254,3 +254,33 @@ header .showTime {
     font-size: 80px !important;
   }
 }
+@media screen and (orientation: portrait) {
+  html{
+      width : 100vmin;
+      height : 100vmax;
+  }
+  body{
+      width : 100vmin;
+      height : 100vmax;
+  }
+  #gyroContain{
+      width : 100vmax;
+      height : 100vmin;
+      transform-origin: top left;
+      transform: rotate(90deg) translate(0,-100vmin);
+  }
+}
+@media screen and (orientation: landscape) {
+  html{
+      width : 100vmax;
+      height : 100vmin;
+  }
+  body{
+      width : 100vmax;
+      height : 100vmin;
+  }
+  #gyroContain{
+      width : 100vmax;
+      height : 100vmin;
+  }
+}
