修改css3兼容动画设置

--- a/css/index.css
+++ b/css/index.css
@@ -227,7 +227,7 @@ header .showTime {
   width: 100%;
   height: 10.125rem;
 }
-@keyframes rotate1 {
+@-webkit-keyframes rotate1 {
   form {
     transform: translate(-50%, -50%) rotate(0deg);
   }
@@ -235,7 +235,7 @@ header .showTime {
     transform: translate(-50%, -50%) rotate(360deg);
   }
 }
-@keyframes rotate2 {
+@-webkit-keyframes rotate2 {
   form {
     transform: translate(-50%, -50%) rotate(0deg);
   }
