--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,7 @@ body {
 header {
   position: relative;
   height: 1.25rem;
+  text-align: center;
   background: url(../images/head_bg.png) no-repeat;
   background-size: 100% 100%;
 }
@@ -227,7 +228,7 @@ header .showTime {
   width: 100%;
   height: 10.125rem;
 }
-@-webkit-keyframes rotate1 {
+@keyframes rotate1 {
   form {
     transform: translate(-50%, -50%) rotate(0deg);
   }
@@ -235,7 +236,7 @@ header .showTime {
     transform: translate(-50%, -50%) rotate(360deg);
   }
 }
-@-webkit-keyframes rotate2 {
+@keyframes rotate2 {
   form {
     transform: translate(-50%, -50%) rotate(0deg);
   }
